--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+20 Dec 2015 - v0.4 UTF-16
+
+  Fixes for UTF-16 conversion error from Rob O'Neale and James Wright
+
 24 Oct 2006 - v0.3 UTF8
 
   Patch to support UTF8 from Yohei Fushii 
